<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus.klasseandroid.announcements.InstructorAnnounce">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:text="Enter announcement content:"
        android:textAlignment="center"
        android:textSize="20dp" />
    <EditText
        android:id="@+id/announcetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/postannounce"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Post announcement"
        android:textColor="#ffffff"
        android:padding="20dp"
        android:background="#03705F"/>

</LinearLayout>
