<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.asus.klasseandroid.general.Welcome"
    android:background="#04A58C"

    >

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:padding="20dp"
        android:src="@drawable/klasse"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
         />

    <Button
        android:id="@+id/student"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="#03705F"
        android:elevation="20dp"
        android:padding="20dp"
        android:text="    Student   "
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/instruct"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#03705F"
        android:elevation="20dp"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:text="Instructor"
        android:textAlignment="center"
        android:textColor="#ffffff" />

</LinearLayout>
